--- a/Test/Views/Shared/_Layout.cshtml
+++ b/Test/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width" />
-    <title>_Layout</title>
+    <title>Test</title>
 </head>
 <body>
     <div class="container">
