add some fix and links to pastas

--- a/Test/Views/Home/ErrorPasta.cshtml
+++ b/Test/Views/Home/ErrorPasta.cshtml
@@ -6,4 +6,6 @@
 
 <h2>Sorry, but this pasta is not available...</h2>
 <p>Причина: пользователь ограничил доступ к пасте.</p>
+<hr />
+<p>@Html.ActionLink("Обратно", "Index")</p>
 
