--- a/Test/Views/Home/Index.cshtml
+++ b/Test/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    List<Test.Models.Pasta> list = ViewBag.List;
 }
 
 @using (Html.BeginForm("CreatePasta", "Home", FormMethod.Post))
@@ -51,4 +52,8 @@
 }
 <div>
     <p>Last pastas</p>
+    @for (int i = 0; i < 10; i++)
+    {
+        <p>@Html.ActionLink(list[i].AuthorName, "IndexPasta", new { hash = list[i].Hash })</p>
+    }
 </div>
