--- a/Test/Views/Home/IndexPasta.cshtml
+++ b/Test/Views/Home/IndexPasta.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Pasta</h2>
 <form method="get">
-    <input type="hidden" value="@ViewBag.PastaHash" name="PastaHash"/>
+    @Html.HiddenFor(model => model.Hash)
     <dt>
         @Html.DisplayNameFor(model => model.AuthorName)
     </dt>
